# Hospitality-Operations-Agentic-AI-B2B

./: .dockerignore  .env  .env.example  .gitignore  ADDENDUM_3_TOOLS.md  CLAUDE.md  DEMO_QUICK_START.md  Dockerfile  FICHIERS_MASTER_STATUS.md  FIX_ENV.md  GUIDE_UTILISATION_DOCS.md  NAVIGATION_3_FICHIERS.md  PITCH.md  QUICK_UPDATE_3_TOOLS.md  README.md  README_GITHUB.md  READY_TO_GO.md  TLDR_1_PAGE.md  VALIDATION_REPORT.md  add_missing_keys.py  aetherix_brutal_feedback.md  api.py  autonomous_agent.py  demo_app.py  docker-compose.yml  main.py  requirements.txt  seed_data.py  smoke_test.py  start_api.py  start_server.py  test_api.py  test_elevenlabs.py  test_env.py  test_final.py  test_predictor.py  voice_input.py
_legacy/: README.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt  start.sh  test_all_endpoints.py  test_connections.py  test_endpoints_direct.py
backend/agents/: demand_predictor.py  reasoning_engine.py
backend/app/: main.py  mcp_server.py
backend/app/core/: config.py  exceptions.py
backend/app/db/: models.py  session.py
backend/docs/: FORECASTING_METHODS.md  PHASE_1_LIMITATIONS.md
backend/ml/: __init__.py
backend/models/: schemas.py
backend/scripts/: seed_qdrant.py
backend/tests/: test_action_logger.py  test_alert_dispatcher.py  test_anomaly_detection.py  test_apaleo_mcp_adapter.py  test_apaleo_readonly_logging.py  test_captation_service.py  test_claude_orchestrator.py  test_e2e_smoke.py  test_event_ingestion.py  test_hos106_contextual_features.py  test_hos106_feedback_loop.py  test_mcp_server.py  test_notifications.py  test_pattern_scorer.py  test_pms_probe.py  test_recommendation_formatter.py  test_roi_calculator.py  test_weather_ingestion.py
backend/utils/: claude_client.py  qdrant_client.py
fastapi-backend/: .env.example  Dockerfile  pyproject.toml  run_uvicorn_with_env.py  search_results.txt  server_log.txt  start.sh
fastapi-backend/app/: main.py  main_story1_1_patch.py
fastapi-backend/tests/: test_error_handler.py
(+341 files in other folders)
