[project]
name = "aetherix-backend"
version = "0.1.0"
description = "Aetherix F&B Operations Agent — FastAPI backend"
requires-python = ">=3.12,<3.13"
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.115.0,<0.116",
    "asyncpg>=0.29.0,<0.30",
    "fastapi-users[sqlalchemy]>=13.0.0,<14",
    "pydantic-settings>=2.5.2,<3",
    "fastapi-mail>=1.4.1,<2",
    "fastapi-pagination==0.13.3",
    "httpx>=0.27.0",
    "tenacity>=8.3.0,<9",
    "apscheduler>=3.10.0,<4",
    "anthropic>=0.34.0",
    "qdrant-client>=1.11.0",
    "mistralai>=1.0.0",
    "prophet>=1.1.5",
    "pandas>=2.2.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0,<0.2",
    "pytest>=8.3.3,<9",
    "pytest-mock>=3.14.0,<4",
    "pytest-asyncio>=0.24.0,<0.25",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
